--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,22 @@ iframe#tela {
     height: 475px;
     width: 266px;
 }
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 70px;
+    margin: 15px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.700);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.884);
+    transform: translate(-5px, -5px);
+    box-shadow: 5px 5px 10ps rgba(0, 0, 0, 0.699);
+    transition: transform 0.3s, border 1s;
+}
